# python-zimbra-web

./: .buildinfo  .gitignore  MANIFEST.in  README.md  README.rst  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements_dev.txt  setup.cfg  smtp_server.py  test.py  tox.ini  zimbra.py
.doctrees/: environment.pickle  modules.doctree  zimbraweb.doctree
.github/workflows/: tests.yml
_sources/: zimbraweb.rst.txt
develop/: genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  zimbraweb.html
develop/.doctrees/: environment.pickle  index.doctree  zimbraweb.doctree
develop/_sources/: index.rst.txt
docs/source/: conf.py  index.rst  modules.rst  zimbra.rst  zimbraweb.rst
notes/: Zimbra.postman_collection.json  notes  notes_logout  notes_request_fileupload  notes_request_fileupload_startupload.yml  notes_request_send_fileattachment  notes_request_send_working  notes_request_sendwithfile_working
src/zimbra/: __init__.py
src/zimbra/templates/: Testanhang.txt  message.txt  message_backpart.txt
src/zimbraweb/: __init__.py  emlparsing.py
templates/: message.txt
tests/: conftest.py  test_zimbra.py
tests/templates/: attachmentmail.eml  attachments.eml  html.eml  outlookmail.eml  plaintext.eml  simplemail.eml  unicode.txt
