[metadata]
name = zimbraweb
version = attr: zimbraweb.__version__
description = A Python wrapper for the Zimbra Web Interface 
author = Cirosec Studis
license = GPL-3.0
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
include_package_data = True
package_data = 

[options]
packages =
    zimbraweb
install_requires =
    requests>=2
python_requires = >=3.6
package_dir =
    =src
zip_safe = no
include_package_data=True

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
    types-request>=2.25
    types-setuptools>=57.4.2
    sphinx>=4.2

[options.package_data]
zimbraweb = py.typed

[flake8]
max-line-length = 160